aws/pam/pam_cft.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Paraview PAM Standalone FREE edition for AWS Cloudformation Template ver 1.0

Mappings:
  RegionMap:
    us-east-1:
      ami: ami-054cfdd98594373cb
    us-east-2:
      ami: ami-002a15b3f4771ef44
    us-west-1:
      ami: ami-022025faba12be99d
    us-west-2:
      ami: ami-073cae0c9f5e83cc3
    ap-southeast-1:
      ami: ami-08ad205cd93beaaba
    ap-east-1:
      ami: ami-02fa98db2d246a612

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Select an existing VPC

  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Select a public subnet within the chosen VPC

  PamInstanceType:
    Type: String
    Default: t2.xlarge
    Description: Select the EC2 instance type for PAM instance
    AllowedValues:
      - t2.xlarge
      - t3.xlarge
      - m5.xlarge
      - m4.xlarge

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select the existing key pair
    ConstraintDescription: Select the existing key pair
  
  SshCidr:
    Description: 'Please enter the CIDR block for SSH access (e.g., 0.0.0.0/0 or 192.168.0.0/16)'
    Type: String
    AllowedPattern: '^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$'
    ConstraintDescription: 'Must be a valid CIDR block in the format x.x.x.x/n'

Resources:
  PamWaitHandle:
    Type: AWS::CloudFormation::WaitConditionHandle

  PamWaitCondition:
    Type: AWS::CloudFormation::WaitCondition
    Properties:
      Handle: !Ref PamWaitHandle
      Timeout: '2700'
      Count: 1

  LambdaExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: para-pam-IAMRole-trial
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: para-pam-IAMPolicy-trial
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ec2:DescribeVpcs
                Resource: '*'
      Tags:
        - Key: Name
          Value: para-pam-IAMRole-trial

  GetVpcCidrFunction:
    Type: AWS::Lambda::Function
    Properties:
      FunctionName: para-pam-LambdaFunction-trial
      Handler: index.handler
      Role: !GetAtt LambdaExecutionRole.Arn
      Runtime: python3.12
      Code:
        ZipFile: |
          import boto3
          import cfnresponse
          def handler(event, context):
              ec2 = boto3.client('ec2')
              vpc_id = event['ResourceProperties']['VpcId']
              try:
                  response = ec2.describe_vpcs(VpcIds=[vpc_id])
                  cidr_block = response['Vpcs'][0]['CidrBlock']
                  cfnresponse.send(event, context, cfnresponse.SUCCESS, {'VpcCidr': cidr_block})
              except Exception as e:
                  print(f"Error: {str(e)}")
                  cfnresponse.send(event, context, cfnresponse.FAILED, {'Error': str(e)})
      Timeout: 60
      Tags:
        - Key: Name
          Value: para-pam-LambdaFunction-trial

  VpcCidrCustomResource:
    Type: Custom::GetVpcCidr
    Properties:
      ServiceToken: !GetAtt GetVpcCidrFunction.Arn
      VpcId: !Ref VpcId

  PamSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: para-pam-SecurityGroup-trial
      GroupDescription: Pam EC2 Security group with specific ingress rules
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        # Allow SSH (port 22) from anywhere
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SshCidr

        # Allow HTTPS (port 443) from anywhere
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

        # Allow HTTP (port 80) from anywhere
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        # Allow all traffic within the VPC CIDR range
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: !GetAtt VpcCidrCustomResource.VpcCidr
      Tags:
        - Key: Name
          Value: para-pam-SecurityGroup-trial

  PamElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: para-pam-EIP-trial

  PamEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref PamInstanceType
      KeyName: !Ref KeyName
      ImageId: !FindInMap [RegionMap, !Ref 'AWS::Region', ami]
      SubnetId: !Ref SubnetId
      SecurityGroupIds:
        - !Ref PamSecurityGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          private_ip=$(curl http://169.254.169.254/latest/meta-data/local-ipv4)
          public_ip=$(curl http://169.254.169.254/latest/meta-data/public-ipv4)
          /bin/bash /opt/script/config.sh $private_ip $public_ip ${PamSecurityGroup}
          sleep 1m
          echo "***end of ansible playbook deployment for PAM***"
          /opt/aws/bin/cfn-signal -e $? '${PamWaitHandle}' 
      Tags:
        - Key: Name
          Value: para-pam-EC2Instance-trial

  PamEIPAssociation:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt PamElasticIP.AllocationId
      InstanceId: !Ref PamEC2Instance

Outputs:
  PamInstanceId:
    Description: ID of the PAM EC2 instance
    Value: !Ref PamEC2Instance
  

  PamPublicIP:
    Description: Public IP address of the PAM EC2 instance
    Value: !Ref PamElasticIP


  PamDeploymentMessage:
    Description: The final output of the Pam deployment
    Value: !Sub |
      Access portal: https://${PamElasticIP} with credentail: _sysadmin/${PamSecurityGroup} You will have 7 days license for your evaluation and testing. Thanks!
